[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menus/startMenu.gd" type="Script" id=1]

[node name="startMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="mainMenu" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="mainRect" type="ColorRect" parent="mainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109375, 0.109375, 0.109375, 1 )

[node name="buttons" type="VBoxContainer" parent="mainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -34.0
margin_right = 37.5
margin_bottom = 34.0

[node name="newGameButton" type="Button" parent="mainMenu/buttons"]
margin_right = 75.0
margin_bottom = 20.0
text = "Novo Jogo"

[node name="settingsButton" type="Button" parent="mainMenu/buttons"]
margin_top = 24.0
margin_right = 75.0
margin_bottom = 44.0
text = "Opções"

[node name="exitButton" type="Button" parent="mainMenu/buttons"]
margin_top = 48.0
margin_right = 75.0
margin_bottom = 68.0
text = "Sair"

[node name="settingsMenu" type="Control" parent="."]
margin_left = 1024.0
margin_right = 2048.0
margin_bottom = 600.0

[node name="setRect" type="ColorRect" parent="settingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="buttons" type="VBoxContainer" parent="settingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -22.0
margin_right = 71.5
margin_bottom = 22.0

[node name="fullscreenButton" type="Button" parent="settingsMenu/buttons"]
margin_right = 143.0
margin_bottom = 20.0
text = "Tela Cheia"

[node name="backButton" type="Button" parent="settingsMenu/buttons"]
margin_top = 24.0
margin_right = 143.0
margin_bottom = 44.0
text = "Voltar ao men inicial"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="mainMenu/buttons/settingsButton" to="." method="_on_settingsButton_pressed"]
[connection signal="pressed" from="mainMenu/buttons/exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="pressed" from="settingsMenu/buttons/fullscreenButton" to="." method="_on_fullscreenButton_pressed"]
[connection signal="pressed" from="settingsMenu/buttons/backButton" to="." method="_on_backButton_pressed"]
